Revision Minor & New Solving Task 2

--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
 <body class="bg-light-primary">
     <div class="container">
         <div class="row justify-content-center mt-5">
-            <h3 class="font-weight-bolder text-light-primary">Tugas Javascript Kelas Front End ⚡✨</h3>
+            <h3 class="font-weight-bolder text-light-primary">Challenge Javascript Kelas Front End ⚡✨</h3>
         </div>
         <div class="row justify-content-center">
-            <p class="text-light-primary font-weight-bolder">Oleh : <a href="https://instagram.com/farrid_jr" class="text-decoration-none text-semi-light">@Farrid_Jr</a> 👋</p>
+            <h5 class="font-weight-bolder"><a href="https://academy.glints.com" class="text-decoration-none text-semi-light font-italic" target="_blank">Glints Academy</a> ❌ <a href="https://binaracademy.com" class="text-decoration-none text-semi-light font-italic" target="_blank">BINAR.</a></h5>
+        </div>
+        <div class="row justify-content-center">
+            <p class="text-light-primary font-weight-bolder">Oleh : <a href="https://instagram.com/farrid_jr" class="text-decoration-none text-semi-light" target="_blank">@Farrid_Jr</a> 👋</p>
         </div>
         <div class="row justify-content-center">
             <table class="table table-md text-light-primary">
@@ -37,8 +40,9 @@
                         <td>Input : Kamis
                             <br />Output : Besok adalah Jumat
                         </td>
-                        <td>❌</td>
-                        <td>❌</td>
+                        <td>Senin, Selasa, Rabu, Kamis,
+                            <br/> Jumat, Sabtu &amp; Minggu</td>
+                        <td>✅</td>
                         <td><button class="btn btn-sm btn-light-primary" onclick="clickTask1()">Ayo 🚀</button></td>
                     </tr>
                     <tr>
@@ -69,7 +73,7 @@
                                 <div class="col">= TL</div>
                             </div>
                         </td>
-                        <td>❌</td>
+                        <td>✅</td>
                         <td><button class="btn btn-sm btn-light-primary" onclick="clickTask2()">Ayo 🚀</button></td>
                     </tr>
                     <tr>
