--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <td>Senin, Selasa, Rabu, Kamis,
                             <br/> Jumat, Sabtu &amp; Minggu</td>
                         <td>✅</td>
-                        <td><button class="btn btn-sm btn-light-primary" onclick="clickTask1()">Ayo 🚀</button></td>
+                        <td><button class="btn btn-sm btn-light-primary font-weight-bolder" onclick="clickTask1()">Ayo 🚀</button></td>
                     </tr>
                     <tr>
                         <th scope="row">2</th>
@@ -53,7 +53,7 @@
                         </td>
                         <td>
                             <div class="row">
-                                <div class="col-auto">90 - 100</div>
+                                <div class="col">90 - 100</div>
                                 <div class="col">= A</div>
                             </div>
                             <div class="row">
@@ -74,7 +74,7 @@
                             </div>
                         </td>
                         <td>✅</td>
-                        <td><button class="btn btn-sm btn-light-primary" onclick="clickTask2()">Ayo 🚀</button></td>
+                        <td><button class="btn btn-sm btn-light-primary font-weight-bolder" onclick="clickTask2()">Ayo 🚀</button></td>
                     </tr>
                     <tr>
                         <th scope="row">3</th>
@@ -83,7 +83,7 @@
                             <br />Output : 0,2,4,6,8,10,12 ..., 20</td>
                         <td>❌</td>
                         <td>❌</td>
-                        <td><button class="btn btn-sm btn-light-primary" onclick="clickTask3()">Ayo 🚀</button></td>
+                        <td><button class="btn btn-sm btn-light-primary font-weight-bolder" onclick="clickTask3()">Ayo 🚀</button></td>
                     </tr>
                     <tr>
                         <th scope="row">4</th>
@@ -92,7 +92,7 @@
                             <br />Output : 1,3,5,7,9,11,13 ..., 15</td>
                         <td>❌</td>
                         <td>❌</td>
-                        <td><button class="btn btn-sm btn-light-primary" onclick="clickTask4()">Ayo 🚀</button></td>
+                        <td><button class="btn btn-sm btn-light-primary font-weight-bolder" onclick="clickTask4()">Ayo 🚀</button></td>
                     </tr>
                 </tbody>
             </table>
