Fixing & Updating Task 3 🎈

--- a/index.html
+++ b/index.html
@@ -43,7 +43,32 @@
                         <td>Senin, Selasa, Rabu, Kamis,
                             <br/> Jumat, Sabtu &amp; Minggu</td>
                         <td>✅</td>
-                        <td><button class="btn btn-sm btn-light-primary font-weight-bolder" onclick="clickTask1()">Ayo 🚀</button></td>
+                        <td>
+                            <button type="button" class="btn btn-sm btn-light-primary font-weight-bolder" data-toggle="modal" data-target="#task1Modal">Ayo 🚀</button>
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="task1Modal" tabindex="-1" aria-labelledby="task1ModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered">
+                                    <div class="modal-content">
+                                        <div class="modal-header bg-light-secondary text-light-secondary">
+                                            <h5 class="modal-title font-weight-bolder" id="task1ModalLabel">Penentuan Hari Besok</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">❌</span>
+          </button>
+                                        </div>
+                                        <div class="modal-body bg-light-secondary text-light-secondary">
+                                            <p id="hasil-hari" class="font-weight-bolder">
+                                                Klik Tombol dibawah kanan/tentukan hari untuk coba 🌊
+                                            </p>
+                                        </div>
+                                        <div class="modal-footer bg-light-secondary">
+                                            <button class="btn btn-light-primary font-weight-bolder" onclick="clickTask1()">Tentukan Hari 📅</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Akhir Modal -->
+                        </td>
                     </tr>
                     <tr>
                         <th scope="row">2</th>
@@ -74,7 +99,32 @@
                             </div>
                         </td>
                         <td>✅</td>
-                        <td><button class="btn btn-sm btn-light-primary font-weight-bolder" onclick="clickTask2()">Ayo 🚀</button></td>
+                        <td>
+                            <button type="button" class="btn btn-sm btn-light-primary font-weight-bolder" data-toggle="modal" data-target="#task2Modal">Ayo 🚀</button>
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="task2Modal" tabindex="-1" aria-labelledby="task2ModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered">
+                                    <div class="modal-content">
+                                        <div class="modal-header bg-light-secondary text-light-secondary">
+                                            <h5 class="modal-title font-weight-bolder" id="task2ModalLabel">Penentuan Nilai</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">❌</span>
+          </button>
+                                        </div>
+                                        <div class="modal-body bg-light-secondary text-light-secondary">
+                                            <p id="hasil-nilai" class="font-weight-bolder">
+                                                Klik Tombol dibawah kanan/beri nilai untuk coba 🌊
+                                            </p>
+                                        </div>
+                                        <div class="modal-footer bg-light-secondary">
+                                            <button class="btn btn-light-primary font-weight-bolder" onclick="clickTask2()">Beri Nilai 💯</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Akhir Modal -->
+                        </td>
                     </tr>
                     <tr>
                         <th scope="row">3</th>
@@ -83,7 +133,32 @@
                             <br />Output : 0,2,4,6,8,10,12 ..., 20</td>
                         <td>❌</td>
                         <td>❌</td>
-                        <td><button class="btn btn-sm btn-light-primary font-weight-bolder" onclick="clickTask3()">Ayo 🚀</button></td>
+                        <td>
+                            <button type="button" class="btn btn-sm btn-light-primary font-weight-bolder" data-toggle="modal" data-target="#task3eModal">Ayo 🚀</button>
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="task3eModal" tabindex="-1" aria-labelledby="task3eModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered">
+                                    <div class="modal-content">
+                                        <div class="modal-header bg-light-secondary text-light-secondary">
+                                            <h5 class="modal-title font-weight-bolder" id="task3eModalLabel">Prulangan Genap</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">❌</span>
+          </button>
+                                        </div>
+                                        <div class="modal-body bg-light-secondary text-light-secondary">
+                                            <p id="hasil-genap" class="font-weight-bolder">
+                                                Klik Tombol dibawah kanan/hitung genap untuk coba 🌊
+                                            </p>
+                                        </div>
+                                        <div class="modal-footer bg-light-secondary">
+                                            <button class="btn btn-light-primary font-weight-bolder" onclick="clickTask3()">Hitung Genap 💥</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Akhir Modal -->
+                        </td>
                     </tr>
                     <tr>
                         <th scope="row">4</th>
@@ -92,7 +167,32 @@
                             <br />Output : 1,3,5,7,9,11,13 ..., 15</td>
                         <td>❌</td>
                         <td>❌</td>
-                        <td><button class="btn btn-sm btn-light-primary font-weight-bolder" onclick="clickTask4()">Ayo 🚀</button></td>
+                        <td>
+                            <button type="button" class="btn btn-sm btn-light-primary font-weight-bolder" data-toggle="modal" data-target="#task4Modal">Ayo 🚀</button>
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="task4Modal" tabindex="-1" aria-labelledby="task4ModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered">
+                                    <div class="modal-content">
+                                        <div class="modal-header bg-light-secondary text-light-secondary">
+                                            <h5 class="modal-title font-weight-bolder" id="task4ModalLabel">Prulangan Ganjil</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">❌</span>
+          </button>
+                                        </div>
+                                        <div class="modal-body bg-light-secondary text-light-secondary">
+                                            <p id="hasil-genap" class="font-weight-bolder">
+                                                Klik Tombol dibawah kanan/hitung ganjil untuk coba 🌊
+                                            </p>
+                                        </div>
+                                        <div class="modal-footer bg-light-secondary">
+                                            <button class="btn btn-light-primary font-weight-bolder" onclick="clickTask3()">Hitung Ganjil ⛳</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Akhir Modal -->
+                        </td>
                     </tr>
                 </tbody>
             </table>
