--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
             <h3 class="font-weight-bolder text-light-primary">Challenge Javascript Kelas Front End ⚡✨</h3>
         </div>
         <div class="row justify-content-center">
-            <h5 class="font-weight-bolder"><a href="https://academy.glints.com" class="text-decoration-none text-semi-light font-italic" target="_blank">Glints Academy</a> ❌ <a href="https://binaracademy.com" class="text-decoration-none text-semi-light font-italic" target="_blank">BINAR.</a></h5>
+            <h5 class="font-weight-bolder text-light-primary">
+                <a href="https://academy.glints.com" class="text-decoration-none text-semi-light font-italic" target="_blank">Glints Academy</a> ❌
+                <a href="https://binaracademy.com" class="text-decoration-none text-semi-light font-italic" target="_blank">BINAR</a>
+                <sup class="font-italic"> (batch 8)</sup>
+            </h5>
         </div>
         <div class="row justify-content-center">
-            <p class="text-light-primary font-weight-bolder">Oleh : <a href="https://instagram.com/farrid_jr" class="text-decoration-none text-semi-light" target="_blank">@Farrid_Jr</a> 👋</p>
+            <p class="text-light-primary font-weight-bolder">Oleh :
+                <a href="https://instagram.com/farrid_jr" class="text-decoration-none text-semi-light" target="_blank">@Farrid_Jr</a> 👋
+            </p>
         </div>
         <div class="row justify-content-center">
             <table class="table table-md text-light-primary">
@@ -147,8 +153,10 @@
           </button>
                                         </div>
                                         <div class="modal-body bg-light-secondary text-light-secondary">
-                                            <p id="hasil-genap" class="font-weight-bolder">
+                                            <p id="info-genap" class="font-weight-bolder">
                                                 Klik Tombol dibawah kanan/hitung genap untuk coba 🌊
+                                            </p>
+                                            <p id="hasil-genap" class="font-weight-bolder">
                                             </p>
                                         </div>
                                         <div class="modal-footer bg-light-secondary">
@@ -164,7 +172,7 @@
                         <th scope="row">4</th>
                         <td>Buat perulangan, menampilkan angka ganjil</td>
                         <td>Input : 15
-                            <br />Output : 1,3,5,7,9,11,13 ..., 15</td>
+                            <br />Output : 0,3,5,7,9,11,13 ..., 15</td>
                         <td>❌</td>
                         <td>❌</td>
                         <td>
@@ -181,8 +189,10 @@
           </button>
                                         </div>
                                         <div class="modal-body bg-light-secondary text-light-secondary">
-                                            <p id="hasil-genap" class="font-weight-bolder">
+                                            <p id="info-ganjil" class="font-weight-bolder">
                                                 Klik Tombol dibawah kanan/hitung ganjil untuk coba 🌊
+                                            </p>
+                                            <p id="hasil-ganjil" class="font-weight-bolder">
                                             </p>
                                         </div>
                                         <div class="modal-footer bg-light-secondary">
