Adding a Comment for Marking 🟩

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body class="bg-light-primary">
     <div class="container">
+        <!-- Ini Header Start -->
         <div class="row justify-content-center mt-5">
             <h3 class="font-weight-bolder text-light-primary">Challenge Javascript Kelas Front End ⚡✨</h3>
         </div>
@@ -27,6 +28,9 @@
                 <a href="https://instagram.com/farrid_jr" class="text-decoration-none text-semi-light" target="_blank">@Farrid_Jr</a> 👋
             </p>
         </div>
+        <!-- Ini Header End -->
+
+        <!-- Ini Tabel Start -->
         <div class="row justify-content-center">
             <table class="table table-md text-light-primary">
                 <thead class="thead-light-primary">
@@ -40,6 +44,8 @@
                     </tr>
                 </thead>
                 <tbody>
+
+                    <!-- Ini Task 1 Start-->
                     <tr>
                         <th scope="row">1</th>
                         <td>Buatkan kondisi untuk menentukan hari besok</td>
@@ -52,15 +58,15 @@
                         <td>
                             <button type="button" class="btn btn-sm btn-light-primary font-weight-bolder" data-toggle="modal" data-target="#task1Modal">Ayo 🚀</button>
 
-                            <!-- Modal -->
+                            <!-- Ini Popup Start-->
                             <div class="modal fade" id="task1Modal" tabindex="-1" aria-labelledby="task1ModalLabel" aria-hidden="true">
                                 <div class="modal-dialog modal-dialog-centered">
                                     <div class="modal-content">
                                         <div class="modal-header bg-light-secondary text-light-secondary">
                                             <h5 class="modal-title font-weight-bolder" id="task1ModalLabel">Penentuan Hari Besok</h5>
                                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">❌</span>
-          </button>
+                                                <span aria-hidden="true">❌</span>
+                                            </button>
                                         </div>
                                         <div class="modal-body bg-light-secondary text-light-secondary">
                                             <p id="hasil-hari" class="font-weight-bolder">
@@ -73,9 +79,13 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- Akhir Modal -->
+                            <!-- Ini Popup End -->
+
                         </td>
                     </tr>
+                    <!-- Ini Task 1 End -->
+
+                    <!-- Ini Task 2 Start -->
                     <tr>
                         <th scope="row">2</th>
                         <td>Buat kondisi untuk menentukan nilai huruf</td>
@@ -108,15 +118,15 @@
                         <td>
                             <button type="button" class="btn btn-sm btn-light-primary font-weight-bolder" data-toggle="modal" data-target="#task2Modal">Ayo 🚀</button>
 
-                            <!-- Modal -->
+                            <!-- Ini Popup Start -->
                             <div class="modal fade" id="task2Modal" tabindex="-1" aria-labelledby="task2ModalLabel" aria-hidden="true">
                                 <div class="modal-dialog modal-dialog-centered">
                                     <div class="modal-content">
                                         <div class="modal-header bg-light-secondary text-light-secondary">
                                             <h5 class="modal-title font-weight-bolder" id="task2ModalLabel">Penentuan Nilai</h5>
                                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">❌</span>
-          </button>
+                                                <span aria-hidden="true">❌</span>
+                                            </button>
                                         </div>
                                         <div class="modal-body bg-light-secondary text-light-secondary">
                                             <p id="hasil-nilai" class="font-weight-bolder">
@@ -129,9 +139,13 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- Akhir Modal -->
+                            <!-- Ini Popoup End -->
+
                         </td>
                     </tr>
+                    <!-- Ini Task 2 End -->
+
+                    <!-- Ini Task 3 Start -->
                     <tr>
                         <th scope="row">3</th>
                         <td>Buat perulangan, menampilkan angka genap</td>
@@ -142,15 +156,15 @@
                         <td>
                             <button type="button" class="btn btn-sm btn-light-primary font-weight-bolder" data-toggle="modal" data-target="#task3eModal">Ayo 🚀</button>
 
-                            <!-- Modal -->
+                            <!-- Ini Popup Start -->
                             <div class="modal fade" id="task3eModal" tabindex="-1" aria-labelledby="task3eModalLabel" aria-hidden="true">
                                 <div class="modal-dialog modal-dialog-centered">
                                     <div class="modal-content">
                                         <div class="modal-header bg-light-secondary text-light-secondary">
                                             <h5 class="modal-title font-weight-bolder" id="task3eModalLabel">Prulangan Genap</h5>
                                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">❌</span>
-          </button>
+                                                <span aria-hidden="true">❌</span>
+                                            </button>
                                         </div>
                                         <div class="modal-body bg-light-secondary text-light-secondary">
                                             <p id="info-genap" class="font-weight-bolder">
@@ -165,9 +179,13 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- Akhir Modal -->
+                            <!-- Ini Popup End -->
+
                         </td>
                     </tr>
+                    <!-- Ini Task 3 End -->
+
+                    <!-- Ini Task 4 Start -->
                     <tr>
                         <th scope="row">4</th>
                         <td>Buat perulangan, menampilkan angka ganjil</td>
@@ -178,15 +196,15 @@
                         <td>
                             <button type="button" class="btn btn-sm btn-light-primary font-weight-bolder" data-toggle="modal" data-target="#task4Modal">Ayo 🚀</button>
 
-                            <!-- Modal -->
+                            <!-- Ini Popup Start -->
                             <div class="modal fade" id="task4Modal" tabindex="-1" aria-labelledby="task4ModalLabel" aria-hidden="true">
                                 <div class="modal-dialog modal-dialog-centered">
                                     <div class="modal-content">
                                         <div class="modal-header bg-light-secondary text-light-secondary">
                                             <h5 class="modal-title font-weight-bolder" id="task4ModalLabel">Prulangan Ganjil</h5>
                                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">❌</span>
-          </button>
+                                                <span aria-hidden="true">❌</span>
+                                            </button>
                                         </div>
                                         <div class="modal-body bg-light-secondary text-light-secondary">
                                             <p id="info-ganjil" class="font-weight-bolder">
@@ -201,11 +219,15 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- Akhir Modal -->
+                            <!-- Ini Popup End -->
+
                         </td>
                     </tr>
+                    <!-- Ini Task 4 End -->
+
                 </tbody>
             </table>
+            <!-- Ini Table End -->
         </div>
     </div>
     <!-- Ini JS Task -->
