--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Tugas Javascript</title>
+    <title>Tugas 3 - Challenge Javascript</title>
     <!-- Ini Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Inter:300,300italic,700,700italic%7CLora:400,400italic" rel="stylesheet" type="text/css" />
     <!-- Ini Styling Custom -->
